--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,14 @@
 	"name": "Password Manager",
 	"version": "0.1",
 	"description": "Welp. It's a password manager.",
+	"permissions": ["storage", "declarativeContent"],
 	"background": {
 		"scripts": ["background.js"],
 		"persistent": false
+	},
+	"browser_action":{
+		"default_title": "Password Manager",
+		"default_popup": "popup.html"
 	},
 	"manifest_version": 2
 }
