--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,6 @@
 		"default_title": "Password Manager",
 		"default_popup": "popup.html"
 	},
+	"options_page": "options.html",
 	"manifest_version": 2
 }
