--- a/project/manifest.json
+++ b/project/manifest.json
@@ -5,7 +5,7 @@
 	"permissions": ["storage", "declarativeContent", "<all_urls>", "activeTab"],
 	"background": {
 		"page": "html/background.html",
-		"persistent": true
+		"persistent": false
 	},
 	"browser_action":{
 		"default_title": "Password Manager",
