--- a/project/manifest.json
+++ b/project/manifest.json
@@ -4,13 +4,13 @@
 	"description": "Welp. It's a password manager.",
 	"permissions": ["storage", "declarativeContent", "<all_urls>", "activeTab"],
 	"background": {
-		"page": "html/background.html",
+		"page": "background/background.html",
 		"persistent": false
 	},
 	"browser_action":{
 		"default_title": "Password Manager",
-		"default_popup": "html/popup.html"
+		"default_popup": "popup/popup.html"
 	},
-	"options_page": "html/options.html",
+	"options_page": "options/options.html",
 	"manifest_version": 2
 }
