--- a/project/manifest.json
+++ b/project/manifest.json
@@ -7,6 +7,16 @@
 		"page": "background/background.html",
 		"persistent": false
 	},
+	"content_scripts":[{
+		"matches": ["<all_urls>"],
+		"all_frames": true,
+		"js": [
+			"content/parser.js",
+			"content/content.js"
+		],
+		"run_at": "document_end"
+		}
+	],
 	"browser_action":{
 		"default_title": "Password Manager",
 		"default_popup": "popup/popup.html"
